# ClusterChatServerTest

./: CMakeLists.txt  Makefile  README.md  autobuild.sh
include/public/: public.h
include/server/: chatserver.h  chatservice.h
include/server/database/: chat.sql  sqlserver.h
include/server/model/: friendmodel.h  group.h  groupModel.h  groupUser.h  offlineMsgModel.h  user.h  userModel.h
include/server/redis/: credis.h
src/: Makefile
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Makefile  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: sqlserver.cpp
src/server/model/: friendmodel.cpp  groupModel.cpp  offlineMsgModel.cpp  userModel.cpp
src/server/redis/: credis.cpp
